# scip-io

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASING.md  claude-code-mcp-config.json
.claude/: launch.json  sdl-prompt.md  settings.json
.claude/agents/: explore-sdl.md
.claude/hooks/: force-sdl-explore.sh  force-sdl-mcp.sh  force-sdl-runtime.sh
.codex/environments/: environment.toml
.github/workflows/: ci.yml  release.yml
crates/scip-io-cli/: Cargo.toml
crates/scip-io-cli/src/: main.rs
crates/scip-io-cli/src/cli/: clean.rs  detect.rs  index.rs  indexer_target.rs  install.rs  merge.rs  mod.rs  progress_handler.rs  status.rs  uninstall.rs  update.rs  update_registry.rs  validate.rs
crates/scip-io-core/: Cargo.toml
crates/scip-io-core/src/: cmake_compile_databases.rs  compile_commands.rs  config_discovery.rs  lib.rs  process.rs  progress.rs  scip_language.rs  scope.rs  toolchain.rs
crates/scip-io-core/src/config/: mod.rs
crates/scip-io-core/src/detect/: languages.rs  mod.rs
crates/scip-io-core/src/indexer/: backend.rs  install.rs  mod.rs  planner.rs  registry.rs  runner.rs  version.rs
crates/scip-io-core/src/merge/: mod.rs
crates/scip-io-core/src/validate/: mod.rs
crates/scip-io-core/tests/: hidden_process.rs  windows_linux_backend_smoke.rs
docs/superpowers/plans/: 2026-05-28-windows-linux-indexer-backends.md
gui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gui/src/: main.ts
gui/src/bridge/: tauri.ts
gui/src/components/: Dashboard.ts  IndexProgress.ts  LogViewer.ts  ProgressBar.ts  Results.ts  Settings.ts  StatusBadge.ts  Titlebar.ts
gui/src/state/: store.ts
gui/src/styles/: animations.css  components.css  layout.css  theme.css
scripts/: install.ps1  install.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
