[package]
name = "scip-io-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[lib]
name = "scip_io_core"

[dependencies]
scip = { workspace = true }
protobuf = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
futures-util = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
which = { workspace = true }
